[gd_scene format=3 uid="uid://c57icetv33aaj"]

[ext_resource type="Script" uid="uid://cnt1v2ckbdof7" path="res://Scripts/GuiSceneScript.gd" id="1_y7y7g"]
[ext_resource type="Shader" uid="uid://dmrnno5si1cxy" path="res://Shaders/AstralPlanePostprocessingShader.gdshader" id="2_aq4jo"]
[ext_resource type="Texture2D" uid="uid://by0dkm6gbbikd" path="res://Resources/GUI/LifeBar.png" id="2_ip3d8"]
[ext_resource type="Texture2D" uid="uid://d4h8al4lpk45s" path="res://Resources/GUI/MaskOverlays/MaskOverlay1.png" id="2_tn4uk"]
[ext_resource type="Texture2D" uid="uid://c38sigwwxrvw2" path="res://Resources/DamageOverlay.png" id="3_7h1bn"]
[ext_resource type="Texture2D" uid="uid://bq4iufwc5uhx8" path="res://Resources/GUI/MaskOverlays/MaskOverlay2.png" id="3_aq4jo"]
[ext_resource type="Texture2D" uid="uid://8c883gtsc7q6" path="res://Resources/GUI/MaskOverlays/MaskOverlay3.png" id="4_x58cy"]
[ext_resource type="Texture2D" uid="uid://c42us86pndhes" path="res://Resources/GUI/MaskOverlays/MaskOverlay4.png" id="5_a0emc"]
[ext_resource type="Texture2D" uid="uid://svv5uyfxskt0" path="res://Resources/GUI/Aim.png" id="9_t0qqd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x58cy"]
shader = ExtResource("2_aq4jo")

[node name="GuiScene" type="Node2D" unique_id=351606991]
script = ExtResource("1_y7y7g")

[node name="GuiCanvasLayer" type="CanvasLayer" parent="." unique_id=1066602322]
layer = 10

[node name="AstralEffect" type="ColorRect" parent="GuiCanvasLayer" unique_id=435832362]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_x58cy")
offset_right = 1600.0
offset_bottom = 900.0
mouse_filter = 2

[node name="DamageOverlay" type="Sprite2D" parent="GuiCanvasLayer" unique_id=1495904780]
unique_name_in_owner = true
visible = false
scale = Vector2(5.00625, 4.505)
texture = ExtResource("3_7h1bn")
centered = false

[node name="LifeBar" type="Node2D" parent="GuiCanvasLayer" unique_id=1743064398]
position = Vector2(267, 847)

[node name="HeartSymbol" type="Sprite2D" parent="GuiCanvasLayer/LifeBar" unique_id=1103081484]
position = Vector2(-216.25003, 6.3780518)
scale = Vector2(1.5256411, 1.525641)
texture = ExtResource("2_ip3d8")
region_enabled = true
region_rect = Rect2(1.8662338, 2.382759, 39.712746, 49.159702)

[node name="Frame" type="NinePatchRect" parent="GuiCanvasLayer/LifeBar" unique_id=1064955232]
offset_left = -180.5
offset_top = -29.743652
offset_right = 232.5
offset_bottom = 37.256348
texture = ExtResource("2_ip3d8")
region_rect = Rect2(202.7323, 0, 64.2677, 65)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="InteriorLife" type="NinePatchRect" parent="GuiCanvasLayer/LifeBar" unique_id=1875619573]
unique_name_in_owner = true
offset_left = -172.5
offset_top = -21.743652
offset_right = 225.5
offset_bottom = 38.256348
texture = ExtResource("2_ip3d8")
region_rect = Rect2(50.993538, 0, 150.83182, 65)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="MaskOverlaySprites" type="Node2D" parent="GuiCanvasLayer" unique_id=1823076876]
unique_name_in_owner = true

[node name="S1" type="Sprite2D" parent="GuiCanvasLayer/MaskOverlaySprites" unique_id=861649816]
scale = Vector2(5, 3.7499998)
texture = ExtResource("2_tn4uk")
centered = false

[node name="S2" type="Sprite2D" parent="GuiCanvasLayer/MaskOverlaySprites" unique_id=889659488]
visible = false
scale = Vector2(5, 3.7499998)
texture = ExtResource("3_aq4jo")
centered = false

[node name="S3" type="Sprite2D" parent="GuiCanvasLayer/MaskOverlaySprites" unique_id=1182827341]
visible = false
scale = Vector2(5, 3.7499998)
texture = ExtResource("4_x58cy")
centered = false

[node name="S4" type="Sprite2D" parent="GuiCanvasLayer/MaskOverlaySprites" unique_id=1648840733]
visible = false
scale = Vector2(5, 3.7499998)
texture = ExtResource("5_a0emc")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="GuiCanvasLayer" unique_id=1956440920]
self_modulate = Color(1, 1, 1, 0.5254902)
position = Vector2(800, 450)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_t0qqd")
